hildon-desktop (1:2.2.32-1) unstable; urgency=low

  Kimmo:
  * Fixes: NB#103836 - Call handling view is not displayed when a call is
    initiated from Dialpad
  * Fixes: NB#106919 - Device freezes when tapped outside of Geotagging dialog
  Adam:
  * Fixes: NB#98202 - Version conflict dialog is appeared in background while
    the restoring is going on.
  * Fixes: NB#107503 - ROTATION: status bar disappearing
  * Fixes: NB#106694 - Sometimes close button is not shown on the incoming event
    notification.
  * Fixes: NB#101730 - Title of thumbnails in switcher area is not clear.
  * Fixes: NB#98762 - The "X" in switcher thumbnails should be themed properly
  Jan Arne:
  * Fixes: NB#108527 - Home applets' visibility property is not changed when
    application opens over them
  * Implement Do not disturb flag.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 31 Mar 2009 09:09:52 +0300

hildon-desktop (1:2.2.31-1) unstable; urgency=low

  * Trap X errors in hd_comp_mgr_setup_input_viewport.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 27 Mar 2009 09:41:50 +0200

hildon-desktop (1:2.2.30-1) unstable; urgency=low

  Reverted reversion of Marc's patch:
  * Fixes: NB#106507 - Misc improvements to prestarting sequence.
  * Transition speed adjustments.
  * Fix crash which happens with recent libmatchbox2 changes to event handler
    calling code.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 27 Mar 2009 08:45:29 +0200

hildon-desktop (1:2.2.29-1) unstable; urgency=low

  * Reverted Marc's patch for NB#106507 because it broke background
    killing.
  * Fixes: NB#103508 - handle replacing of stack root correctly

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 25 Mar 2009 09:20:08 +0200

hildon-desktop (1:2.2.28-1) unstable; urgency=low

  Kimmo:
  * Fixes: NB#103447 - Accidental hildon-desktop crash while surfing the web
  Adam:
  * Fixes: NB#105061 - ROTATION: Incoming call dialog in home view is not
    in portrait layout